--- a/static/owo_secret.html
+++ b/static/owo_secret.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secret Website</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Secret</title>
 </head>
 <body>
     <h1>woah how did you get here??? OwO</h1>
-    <img src="/static/images/miku.png" alt="kawaii miku">
+    <img src="/static/images/miku.png" alt="omg its hatsune miku creator of minecraft">
 
     <!-- saint{I_FOUND_THE_ROBOTS_a3d7cb3} -->
 </body>
