Refactor challenge management and solve tracking
- Implement Solve as a SQLAlchemy model, establishing a relationship with the User model.
- Load challenges dynamically from a directory, utilizing TOML files for configuration and ensuring related files are downloadable.

--- a/static/owo_secret.html
+++ b/static/owo_secret.html
@@ -11,6 +11,6 @@
     <h1>woah how did you get here??? OwO</h1>
     <img src="/static/images/miku.png" alt="omg its hatsune miku creator of minecraft">
 
-    <!-- saint{I_FOUND_THE_ROBOTS_a3d7cb3} -->
+    <!-- saint{I_FOUND_THE_ROBOTS!} -->
 </body>
 </html>
